--- a/Capacitor/package.json
+++ b/Capacitor/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@capacitor/android": "^6.2.0",
     "@capacitor/core": "latest",
+    "@capacitor/local-notifications": "^6.1.1",
     "@capacitor/push-notifications": "^6.0.3",
     "firebase": "^11.0.2"
   },
