--- a/Capacitor/capacitor.config.json
+++ b/Capacitor/capacitor.config.json
@@ -4,7 +4,7 @@
   "webDir": "dist",
   "windowsAndroidStudioPath": "C:\\Users\\User\\AppData\\Local\\Android\\android-studio\\bin\\studio64.exe",
   "server": {
-    "url": "http://54.248.217.196/dev/tremblantgo/",
+    "url": "https://tremblantgo.ca",
     "cleartext": true
   }
 }
