--- a/Capacitor/android/gradle/wrapper/gradle-wrapper.properties
+++ b/Capacitor/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,6 @@
-#Wed Dec 18 00:34:27 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip
 networkTimeout=10000
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
